--- a/banking-frontend-angular/src/app/open-acc/open-acc.component.html
+++ b/banking-frontend-angular/src/app/open-acc/open-acc.component.html
@@ -1,5 +1,14 @@
-<div class="text-center">
+ <!--<div class="text-center">
     <img src="/assets/images/hfdc-bank-logo.png" alt="hfdc-bank-logo" width="180" height="180">
+</div> -->
+<div class="header">
+    <a href="#">HFDC Bank</a>
+    <div style="float: right;">
+        <a href="#" routerLink="/home">Home</a>
+        <a href="#" routerLink="/register-ib">Register for Internet Banking</a>
+        <a href="#" routerLink="/open-acc">Apply for Account</a>
+        <a href="#" routerLink="/admin-login">Admin Login</a>
+    </div>
 </div>
 
 <h3><strong>Open Savings Account</strong></h3>
