--- a/banking-frontend-angular/src/app/register-ib/register-ib.component.html
+++ b/banking-frontend-angular/src/app/register-ib/register-ib.component.html
@@ -1,3 +1,12 @@
+<div class="header">
+    <a href="#">HFDC Bank</a>
+    <div style="float: right;">
+        <a href="#" routerLink="/home">Home</a>
+        <a href="#" routerLink="/register-ib">Register for Internet Banking</a>
+        <a href="#" routerLink="/open-acc">Apply for Account</a>
+        <a href="#" routerLink="/admin-login">Admin Login</a>
+    </div>
+</div>
 <div class="wrapper container center">
     <p class="h3">Register for Internet Banking</p>
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
