--- a/banking-frontend-angular/src/app/open-acc/open-acc.component.css
+++ b/banking-frontend-angular/src/app/open-acc/open-acc.component.css
@@ -1,3 +1,30 @@
+.header {
+    overflow: hidden;
+    background-image: linear-gradient(to right, #adb0c5, #d3dbe0);
+    padding: 10px;
+    width: 100%;
+    top: 0;
+    font-weight: 500;
+  }
+  
+  .header a {
+    float: left;
+    color: rgb(58, 56, 56);
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+  }
+  
+  .header {
+    font-size: 25px;
+  }
+  
+  .header a:hover {
+    opacity: 60%;
+  }
+  
 .form{ 
     margin-top:10px;
     margin-left: 75px;
