--- a/banking-frontend-angular/src/app/register-ib/register-ib.component.css
+++ b/banking-frontend-angular/src/app/register-ib/register-ib.component.css
@@ -5,7 +5,7 @@ body {
 }
 
 .wrapper {
-    width: 450px;
+    width: 500px;
     background-image: linear-gradient(to bottom right, #adb0c5, #d3dbe0, #adb0c5);
     border: .2rem solid #428BCA;
     margin-top: 10px;
@@ -30,3 +30,29 @@ input[type="text"], input[type="password"], input[type = "number"] {
 .forgot-options{
     padding-top: 10px;
 }
+.header {
+    overflow: hidden;
+    background-image: linear-gradient(to right, #adb0c5, #d3dbe0);
+    padding: 10px;
+    width: 100%;
+    top: 0;
+    font-weight: 500;
+  }
+  
+  .header a {
+    float: left;
+    color: rgb(58, 56, 56);
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+  }
+  
+  .header {
+    font-size: 25px;
+  }
+  
+  .header a:hover {
+    opacity: 60%;
+  }
