Routing added in home,dashboard and login component and added user-profile and change passsword components

--- a/banking-frontend-angular/src/app/home/home.component.html
+++ b/banking-frontend-angular/src/app/home/home.component.html
@@ -32,4 +32,5 @@
 <a [routerLink]="['/session-expired']"><button>SESSION EXPIRED</button></a>
 <a [routerLink]="['/forgot-user-id']"><button>FORGOT USER ID</button></a>
 <a [routerLink]="['/forgot-password']"><button>FORGOT PASSWORD</button></a>
-<a [routerLink]="['/set-new-password']"><button>SET NEW PASSWORD</button></a> 
+<a [routerLink]="['/set-new-password']"><button>SET NEW PASSWORD</button></a>
+<a [routerLink]="['/user-profile']"><button>USER PROFILE</button></a>  
