--- a/banking-frontend-angular/src/app/login/login.component.html
+++ b/banking-frontend-angular/src/app/login/login.component.html
@@ -30,7 +30,7 @@
     </form>
     <!-- <p>Register for Internet Banking <a href="">here</a>.</p> -->
     <div class="forgot-options">
-        <p>Forgot User ID? <a href="">Click here</a>.</p>
-        <p>Forgot Password? <a href="">Click here</a>.</p>
+        <p>Forgot User ID? <a href="#" routerLink="/forgot-user-id">Click here</a>.</p>
+        <p>Forgot Password? <a href="#" routerLink="/forgot-password">Click here</a>.</p>
     </div>
 </div>
