--- a/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
+++ b/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
@@ -1,6 +1,4 @@
-<!-- COMMENTED BECAUSE OF ERRORS -->
-
-<!-- <div class="page-header h1">
+ <div class="page-header h1">
     <p>HFDC Bank</p>
 </div>
 <div class="wrapper container" style="width: 28%;">
@@ -22,4 +20,3 @@
         </div>
     </form>
 </div>
- -->
