--- a/banking-frontend-angular/src/app/dashboard/dashboard.component.html
+++ b/banking-frontend-angular/src/app/dashboard/dashboard.component.html
@@ -8,10 +8,10 @@
             <li [routerLink]="['/session-expired']">User Profile</li>
             <li>Change User ID</li>
             <li>Change Password</li>
-            <li>Logout</li>
+            <li [routerLink]="['/logout']">Logout</li>
         </ul>
     </div>
-    <div class="h5" style=" position: absolute; padding-left: 300px;">Welcome, {{name}}</div>
+    <div class="h5" style=" position: absolute; padding-left: 300px;">Welcome, {{name | uppercase}}</div>
     <div>
         <ul class="sidebar">
             <li [routerLink]="['/account-summary']">Account Summary</li>
