--- a/banking-frontend-angular/src/app/dashboard/dashboard.component.html
+++ b/banking-frontend-angular/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
         <ul style="float: right;">
             <li [routerLink]="['/user-profile']">User Profile</li>
             <li>Change User ID</li>
-            <li>Change Password</li>
+            <li [routerLink]="['/change-password']">Change Password</li>
             <li [routerLink]="['/logout']">Logout</li>
         </ul>
     </div>
