form type changed

--- a/banking-frontend-angular/src/app/change-password/change-password.component.html
+++ b/banking-frontend-angular/src/app/change-password/change-password.component.html
@@ -3,7 +3,7 @@
     <div class="card w-100">
             <div class="card-header">Set New Password</div>
             <div class="card-body">
-                <form [formGroup]="changePasswordForm">
+                <form>
                     <div class="form-group ">
                         <label>Enter old password</label>
                         <input class="form-control" type="password" name="oldPassword">
