--- a/banking-frontend-angular/src/app/forgot-password/forgot-password.component.html
+++ b/banking-frontend-angular/src/app/forgot-password/forgot-password.component.html
@@ -6,6 +6,20 @@
     <br>
     <p>Please fill in your credentials to set the new password.</p>
     <br>
+        <form #f="ngForm" (ngSubmit)="f.form.valid && onSubmit()">
+            <div class="form-group" >
+                <label>Enter User ID</label>
+                <input type="text" #userId="ngModel" [class.is-invalid]="f.submitted && userId.invalid"
+                class="form-control" name="userId" [(ngModel)]="forgotPassword.userId" required>
+                <div *ngIf="f.submitted && userId.invalid" class="invalid-feedback">
+                    <div *ngIf="userId.errors.required">User Id is required</div>
+                </div>
+            </div>
+            
+             <button type="submit" class="btn btn-primary">Proceed</button>
+        </form>
+</div>       
+       <!-- 
         <form [formGroup]="forgotPasswordForm">
             <div class="form-group">
                 <label>Enter User ID</label>
@@ -31,3 +45,4 @@
             </div>
         </form>   
 </div>
+-->
