--- a/banking-frontend-angular/src/app/user-profile/user-profile.component.html
+++ b/banking-frontend-angular/src/app/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <app-dashboard></app-dashboard>
 <div class="wrapper container">
-    <div class="card w-100">
+    <div class="card border-dark w-100">
             <div class="card-header">User Profile</div>
             <div class="card-body">
                 <p class="card-text">Name:{{user.title}} {{user.firstName}} {{user.middleName}} {{user.lastName}}</p>
