--- a/banking-frontend-angular/src/app/forgot-user-id/forgot-user-id.component.html
+++ b/banking-frontend-angular/src/app/forgot-user-id/forgot-user-id.component.html
@@ -6,7 +6,23 @@
     <br>
     <p>Please fill in your credentials to receive your User ID.</p>
     <br>
-    <form [formGroup]="forgotUserIdForm">
+    
+    <form #f="ngForm" (ngSubmit)="f.form.valid && onSubmit()">
+        <div class="form-group" >
+            <label>Enter User ID</label>
+            <input type="text" #accountNo="ngModel" [class.is-invalid]="f.submitted && accountNo.invalid"
+            class="form-control" name="accountNo" [(ngModel)]="forgotUserId.accountNo" required>
+            <div *ngIf="f.submitted && accountNo.invalid" class="invalid-feedback">
+                <div *ngIf="accountNo.errors.required">Account Number is required</div>
+            </div>
+        </div>
+        
+         <button type="submit" class="btn btn-primary">Proceed</button>
+    </form>
+</div>       
+
+
+  <!--<form [formGroup]="forgotUserIdForm">
         <div class="form-group">
             <label>Enter Account Number</label>
             <input [class.is-invalid]="forgotUserIdForm.get('accountNo').invalid && forgotUserIdForm.get('accountNo').touched" 
@@ -30,3 +46,4 @@
         </div>
     </form>
 </div>
+-->
