--- a/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
+++ b/banking-frontend-angular/src/app/set-new-password/set-new-password.component.html
@@ -4,6 +4,25 @@
 <div class="wrapper container" style="width: 28%;">
     <h4>Set New Password</h4>
     <br>
+
+    <form #f="ngForm" (ngSubmit)="onSubmit()">
+        <div class="form-group" >
+            <label>Enter new Password</label>
+            <input type="password" class="form-control" name="newPassword">
+        </div>
+
+        <div class="form-group" >
+            <label>Confirm Password</label>
+            <input type="password" class="form-control" name="newPassword">
+        </div>
+        
+         <button type="submit" class="btn btn-primary">Proceed</button>
+    </form>
+</div>       
+
+
+
+  <!--  
     <form [formGroup]="setNewPasswordForm">
         <div class="form-group ">
             <label>Enter new password</label>
@@ -20,3 +39,4 @@
         </div>
     </form>
 </div>
+-->
