added add-benificiary, view-beneficiary

--- a/banking-frontend-angular/src/app/dashboard/dashboard.component.html
+++ b/banking-frontend-angular/src/app/dashboard/dashboard.component.html
@@ -17,8 +17,8 @@
             <li [routerLink]="['/account-summary']">Account Summary</li>
             <li [routerLink]="['/account-statement']">Account Statement</li>
             <li>Fund Transfer</li>
-            <li>Add Beneficiary</li>
-            <li>Account Statement</li>
+            <li [routerLink]="['/add-beneficiary']">Add Beneficiary</li>
+            <li [routerLink]="['/view-beneficiary']">Saved Beneficiaries</li>
         </ul>
     </div>
 </div>
