--- a/banking-frontend-angular/src/app/account-statement/account-statement.component.html
+++ b/banking-frontend-angular/src/app/account-statement/account-statement.component.html
@@ -1,10 +1,22 @@
 <app-dashboard></app-dashboard>
-<div class="wrapper container">
+<div class="wrapper container transaction">
   <!-- <ul class="list-group transaction" *ngFor="let transaction of transactions">
     <li class="list-group-item list-group-item-dark">{{transaction.transactionId}} {{transaction.txType | uppercase}} {{transaction.amount | currency : 'INR'}}
       {{transaction.date}} {{transaction.remarks}}</li>
   </ul> -->
-  <table class="table table-striped table-active table-responsive-md transaction">
+  <div class="btn-group dropright" style="padding-bottom: 2%;">
+    <button type="button" class="btn btn-secondary">
+      Show last
+    </button>
+    <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    </button>
+    <div class="dropdown-menu">
+      <button class="dropdown-item" type="button">5 transactions</button>
+      <button class="dropdown-item" type="button">7 transactions</button>
+      <button class="dropdown-item" type="button">10 transactions</button>
+    </div>
+  </div>
+  <table class="table table-striped table-active table-responsive-md">
     <thead style="background-color: #adb0c5;">
       <tr>
         <th scope="col">#</th>
