--- a/banking-frontend-angular/src/app/home/home.component.html
+++ b/banking-frontend-angular/src/app/home/home.component.html
@@ -31,3 +31,4 @@
 <a [routerLink]="['/session-expired']"><button>SESSION EXPIRED</button></a>
 <a [routerLink]="['/track-application']"><button>TRACK APPLICATION</button></a>
 <a [routerLink]="['/enter-otp']"><button>Enter OTP</button></a>
+<a [routerLink]="['/admin-dashboard']"><button>Admin Dashboard</button></a>
