--- a/banking-frontend-angular/src/app/open-acc/open-acc.component.html
+++ b/banking-frontend-angular/src/app/open-acc/open-acc.component.html
@@ -125,6 +125,19 @@
                     </div>
                 </div>
                 <div class="form-group row">
+                    <label for="panCardNumber" class="col-sm-5 col-form-label">Pan Card Number <span
+                            style="color:red">*</span></label>
+                    <div class="col-sm-6">
+                        <input type="text" class="form-control" name="panCardNo"
+                            placeholder="Enter Pan Card Number" [(ngModel)]="newAccount.panCardNo"
+                            #aadhaarNo="ngModel" [ngClass]="{ 'is-invalid': f.submitted && panCardNo.invalid }"
+                            required>
+                        <div *ngIf="f.submitted && panCardNo.invalid" class="invalid-feedback">
+                            <div *ngIf="panCardNo.errors.required">Pan Card Number is required</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
                     <label for="dob" class="col-sm-5 col-form-label">Date of Birth <span
                             style="color:red">*</span></label>
                     <div class="col-sm-6">
