changes made in dashboard

--- a/banking-frontend-angular/src/app/change-password/change-password.component.html
+++ b/banking-frontend-angular/src/app/change-password/change-password.component.html
@@ -1,6 +1,6 @@
 <app-dashboard></app-dashboard>
 <div class="wrapper container">
-    <div class="card w-100">
+    <div class="card border-dark w-100">
             <div class="card-header">Set New Password</div>
             <div class="card-body">
                 <form>
